<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:text="@string/button0"
            android:gravity="right"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_weight="1"
            android:textSize="30sp"
            android:id="@+id/etResult"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/buttonClear"
            android:onClick="buttonClick"/>

    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button7"
            android:contentDescription="@string/button7"
            android:layout_weight="1"
            android:typeface="sans"
            android:id="@+id/btn7"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="0"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button8"
            android:contentDescription="@string/button8"
            android:layout_weight="1"
            android:id="@+id/btn8"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button9"
            android:contentDescription="@string/button9"
            android:layout_weight="1"
            android:id="@+id/btn9"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="2"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/buttonDivide"
            android:contentDescription="@string/buttonDivide"
            android:layout_weight="1"
            android:id="@+id/btnDivide"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="3"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button4"
            android:contentDescription="@string/button4"
            android:layout_weight="1"
            android:id="@+id/btn4"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="0"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button5"
            android:contentDescription="@string/button5"
            android:layout_weight="1"
            android:id="@+id/btn5"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button6"
            android:contentDescription="@string/button6"
            android:layout_weight="1"
            android:id="@+id/btn6"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="2"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/buttonMultiply"
            android:contentDescription="@string/buttonMultiply"
            android:layout_weight="1"
            android:id="@+id/btnMultiply"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="3"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button1"
            android:contentDescription="@string/button1"
            android:layout_weight="1"
            android:id="@+id/btn1"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="0"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button2"
            android:contentDescription="@string/button2"
            android:layout_weight="1"
            android:id="@+id/btn2"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button3"
            android:contentDescription="@string/button3"
            android:layout_weight="1"
            android:id="@+id/btn3"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="2"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/buttonSubtract"
            android:contentDescription="@string/buttonSubtract"
            android:layout_weight="1"
            android:id="@+id/btnSubtract"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="3"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/buttonDot"
            android:contentDescription="@string/buttonDot"
            android:layout_weight="1"
            android:id="@+id/btnDot"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="0"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button0"
            android:contentDescription="@string/button0"
            android:layout_weight="1"
            android:id="@+id/btn0"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/buttonResult"
            android:contentDescription="@string/buttonResult"
            android:layout_weight="1"
            android:id="@+id/btnResult"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="2"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/buttonAdd"
            android:contentDescription="@string/buttonAdd"
            android:layout_weight="1"
            android:id="@+id/btnAdd"
            android:onClick="buttonClick"
            android:textSize="@dimen/btnTextSize"
            android:layout_column="3"/>
    </TableRow>

</TableLayout>
